--- a/pewter3.html
+++ b/pewter3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- for css documentation visit https://www.w3schools.com/w3css/default.asp -->
 <title>Pewter</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
